<resources>
    <string name="ab_album_list_all">精选有声书专辑</string>
    <string name="ab_album_list_story_telling">名家评书专辑</string>
    <string name="ab_children">儿童专区</string>
    <string name="ab_children_desc">启迪心灵的奇妙之旅！</string>
    <string name="ab_home_all">精选有声书专辑</string>
    <string name="ab_hot">热门推荐</string>
    <string name="ab_hot_desc">Ranking List</string>
    <string name="ab_mine">我的有声书</string>
    <string name="ab_mine_desc">打开耳朵，启迪心灵的奇妙之旅！</string>
    <string name="ab_speed_title">倍速选择</string>
    <string name="ab_story_telling">名家评书</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_widget">Add widget</string>
    <string name="added_success">添加成功</string>
    <string name="agentweb_camera">Camera</string>
    <string name="agentweb_cancel">Cancel</string>
    <string name="agentweb_click_open">Tap to continue</string>
    <string name="agentweb_coming_soon_download">Coming soon to download the file</string>
    <string name="agentweb_continue">Continue</string>
    <string name="agentweb_current_downloaded_length">downloaded:%s</string>
    <string name="agentweb_current_downloading_progress">Downloading:%s</string>
    <string name="agentweb_default_page_error">error~</string>
    <string name="agentweb_download">Download</string>
    <string name="agentweb_download_fail">Download failed!</string>
    <string name="agentweb_download_task_has_been_exist">The task already exists, do not repeat click to download!</string>
    <string name="agentweb_file_chooser">Files</string>
    <string name="agentweb_file_download">Download</string>
    <string name="agentweb_honeycomblow">Wi-Fi disconnected. Continue the download via mobile data network?</string>
    <string name="agentweb_leave">Go away</string>
    <string name="agentweb_leave_app_and_go_other_page">leaving %s and opening another app?</string>
    <string name="agentweb_loading">Loading ...</string>
    <string name="agentweb_max_file_length_limit">The selected file can not be larger than %s MB</string>
    <string name="agentweb_message_show_continue">Do you want to continue anyway?</string>
    <string name="agentweb_message_show_ssl_error">SSL Certificate error.</string>
    <string name="agentweb_message_show_ssl_expired">The certificate has expired.</string>
    <string name="agentweb_message_show_ssl_hostname_mismatch">The certificate Hostname mismatch.</string>
    <string name="agentweb_message_show_ssl_not_yet_valid">The certificate is not yet valid.</string>
    <string name="agentweb_message_show_ssl_untrusted">The certificate authority is not trusted.</string>
    <string name="agentweb_tips">Note</string>
    <string name="agentweb_title_ssl_error">SSL Certificate Error</string>
    <string name="agentweb_trickter">You have a new notice</string>
    <string name="agree_protocol">{data:[{id:10029,func:general,value:[同意,同意协议]}]}</string>
    <string name="ai_audio_time_error">时长不能超过5分钟</string>
    <string name="ai_content_1">我想创作一首音乐旋律，这首音乐是</string>
    <string name="ai_content_2">风格，表达</string>
    <string name="ai_content_3">的情绪</string>
    <string name="ai_create_out_time">生成超时，请重试！</string>
    <string name="ai_create_progress_1">AI正在努力分析你的需求</string>
    <string name="ai_create_progress_2">AI开始匹配风格</string>
    <string name="ai_create_progress_3">AI正在努力生成中</string>
    <string name="ai_create_unknown_error">生成失败，请重试！</string>
    <string name="ai_load_action">正在努力生成AI作品，请稍后~</string>
    <string name="ai_load_error">加载失败，请重试</string>
    <string name="ai_player_action">请选择音乐</string>
    <string name="ai_player_loading">正在努力加载中，请稍后~</string>
    <string name="ai_random_action">灵感生成中</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answer_short">答</string>
    <string name="app_name">全景声</string>
    <string name="app_wanos_name">WANOS全景声</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appwidget_desc">带你走进身临其境</string>
    <string name="appwidget_desc_245">立即体验全景声</string>
    <string name="appwidget_text">全景声</string>
    <string name="appwidget_text_245">至臻推荐</string>
    <string name="appwidget_wanos_text">WANOS全景声</string>
    <string name="audio_book">有声剧场</string>
    <string name="audio_focus_occupation_no_play">音频通道被占用，无法播放焦点</string>
    <string name="audiobook_album">有声书专辑</string>
    <string name="audiobook_chapter">有声书章节</string>
    <string name="audiobook_follow">收藏专辑</string>
    <string name="audiobook_like_chapter">章节</string>
    <string name="audiobook_played">最近播放</string>
    <string name="audiobook_vip_toast">该章节为VIP章节，请开通会员</string>
    <string name="back">返回</string>
    <string name="back_str">返回</string>
    <string name="banner_adapter_null_error">Adapter为空！请检查下参数</string>
    <string name="bass">贝司</string>
    <string name="beat_num">拍号</string>
    <string name="beat_speed">速度</string>
    <string name="birthday_str">出生日期:</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_confirm">确定</string>
    <string name="byd_app_name">迪声</string>
    <string name="byd_appwidget_text">迪声</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="car_space_setting">车控联动</string>
    <string name="change_cover">更换封面</string>
    <string name="channel_name">渠道：%1$s</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_record">{data:[{id:10021,func:general,value:[清除,清除记录,清除搜索记录,清除历史记录]}]}</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_fast_msg">点击太快啦</string>
    <string name="clock_alert">闹钟提醒</string>
    <string name="close_back_click">{data:[{id:10057,func:general,value:[返回,关闭,取消]}]}</string>
    <string name="cloud_dialog_button_cancel">取消</string>
    <string name="cloud_dialog_button_create">新建文件夹</string>
    <string name="cloud_dialog_button_upload">上传</string>
    <string name="cloud_dialog_cancel_call_request">取消素材上传</string>
    <string name="cloud_dialog_directory_text">我的云空间</string>
    <string name="cloud_dialog_loading">正在加载中...</string>
    <string name="cloud_dialog_title_text">上传至云空间</string>
    <string name="cloud_dialog_upLoad_success">上传成功</string>
    <string name="cloud_dialog_upload_fail">上传失败</string>
    <string name="cloud_material_transcode_fail">转码失败</string>
    <string name="cloud_material_transcoding">转码中</string>
    <string name="collect_audiobook_album">{data:[{id:config,func:general,value:[收藏专辑,收藏该专辑,收藏当前专辑],actionId:1013},{id:config,func:general,value:[取消收藏专辑,取消收藏该专辑,取消收藏当前专辑],actionId:1014}]}</string>
    <string name="collect_audiobook_chapter">{data:[{id:10046,func:general,value:[收藏%1$s]}]}</string>
    <string name="collect_music_group">{data:[{id:config,func:general,value:[收藏歌单,收藏该歌单,收藏当前歌单],actionId:1007},{id:config,func:general,value:[取消收藏歌单,取消收藏该歌单,取消收藏当前歌单],actionId:1008}]}</string>
    <string name="collected_my_space">已收藏至我的空间~</string>
    <string name="comfirm">确定</string>
    <string name="configure">Configure</string>
    <string name="copy">复制</string>
    <string name="create_center">创作中心</string>
    <string name="create_home_item_create_same">创作同款</string>
    <string name="create_mine_collect_works">心动作品</string>
    <string name="create_mine_open_status_all">公开</string>
    <string name="create_mine_open_status_me">仅自己可见</string>
    <string name="create_mine_personal_projects">个人项目</string>
    <string name="create_mine_personal_works">个人作品</string>
    <string name="create_mine_publish_change_status_all">已同步至社区</string>
    <string name="delete">删除</string>
    <string name="p_logout">退出登录</string>
    <string name="p_logout_cancel">取消</string>
    <string name="p_logout_confirm">确认</string>
    <string name="p_logout_sub">确认退出登录，期待您的下次回归～</string>
    <string name="p_person_info_bt">个人资料</string>
    <string name="p_person_order_bt">订单记录</string>
    <string name="p_person_qa_list">常见问题</string>
    <string name="paste">粘贴</string>
    <string name="quantization_16">1/16</string>
    <string name="quantization_2">1/2</string>
    <string name="quantization_4">1/4</string>
    <string name="quantization_8">1/8</string>
    <string name="relax_trial_end_dialog_btn_exit">暂不开通</string>
    <string name="relax_trial_end_dialog_btn_open">开通VIP</string>
    <string name="relax_trial_end_dialog_msg">试听结束，是否开通VIP解锁完整体验？</string>
    <string name="relax_trial_end_dialog_title">试听结束</string>
    <string name="space_setting">设置</string>
    <string name="version_name">全景声 车载端 %1$s</string>
    <string name="version_name_2">京ICP备2022026063号-5A</string>
    <string name="zero_pro_action_add_sound">声音</string>
    <string name="zero_pro_action_help">帮助</string>
    <string name="zero_pro_action_reset">重置</string>
    <string name="zero_pro_action_save">保存</string>
    <string name="zero_pro_action_volume">音量</string>
</resources>