<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@drawable/bg_pop_midi_note_edit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingHorizontal="15dp"
    android:paddingVertical="32dp">
    <TextView
        android:textSize="32sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/delete"
        android:layout_weight="1"
        android:layout_marginHorizontal="15dp"/>
    <TextView
        android:textSize="32sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/copy"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/copy"
        android:layout_weight="1"
        android:layout_marginHorizontal="15dp"/>
    <TextView
        android:textSize="32sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/paste"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/paste"
        android:layout_weight="1"
        android:layout_marginHorizontal="15dp"/>
</LinearLayout>
