<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/radio_group"
    android:background="@drawable/bg_pop_midi_edit_quantization"
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    android:paddingEnd="21dp"
    android:paddingVertical="10dp">
    <RadioButton
        android:textSize="24sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/quantization_2"
        android:background="@drawable/selector_pop_midi_edit_quantization"
        android:layout_width="160dp"
        android:layout_height="54dp"
        android:button="@null"
        android:text="@string/quantization_2"
        android:layout_marginVertical="10dp"/>
    <RadioButton
        android:textSize="24sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/quantization_4"
        android:background="@drawable/selector_pop_midi_edit_quantization"
        android:layout_width="160dp"
        android:layout_height="54dp"
        android:checked="true"
        android:button="@null"
        android:text="@string/quantization_4"
        android:layout_marginVertical="10dp"/>
    <RadioButton
        android:textSize="24sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/quantization_8"
        android:background="@drawable/selector_pop_midi_edit_quantization"
        android:layout_width="160dp"
        android:layout_height="54dp"
        android:button="@null"
        android:text="@string/quantization_8"
        android:layout_marginVertical="10dp"/>
    <RadioButton
        android:textSize="24sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/quantization_16"
        android:background="@drawable/selector_pop_midi_edit_quantization"
        android:layout_width="160dp"
        android:layout_height="54dp"
        android:button="@null"
        android:text="@string/quantization_16"
        android:layout_marginVertical="10dp"/>
</RadioGroup>
