<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_background_img"
        android:layout_width="@dimen/zero_zero"
        android:layout_height="@dimen/zero_zero"
        android:scaleType="centerCrop"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.wanos.media.widget.ball.BallSurfaceView
        android:id="@+id/ball_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="horizontal"
        android:id="@+id/guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:gravity="center_vertical"
        android:id="@+id/ll_action_room"
        android:background="@drawable/btn_zero_bg"
        android:paddingTop="@dimen/relax_edit_action_padding_top"
        android:paddingBottom="@dimen/relax_edit_action_padding_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/relax_edit_action_padding_merge_top"
        android:elevation="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_line">
        <com.wanos.media.widget.CustomEditActionView
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:action_icon="@drawable/icon_zero_super_add"
            app:action_name="@string/zero_pro_action_add_sound"/>
        <com.wanos.media.widget.CustomEditActionView
            android:id="@+id/btn_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/relax_edit_action_space"
            app:action_icon="@drawable/icon_zero_super_volume"
            app:action_name="@string/zero_pro_action_volume"/>
        <com.wanos.media.widget.CustomEditActionView
            android:id="@+id/btn_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/relax_edit_action_space"
            app:action_icon="@drawable/icon_zero_super_save"
            app:action_name="@string/zero_pro_action_save"/>
        <com.wanos.media.widget.CustomEditActionView
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/relax_edit_action_space"
            app:action_icon="@drawable/icon_zero_super_reset"
            app:action_name="@string/zero_pro_action_reset"/>
        <com.wanos.media.widget.CustomEditActionView
            android:id="@+id/btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/relax_edit_action_space"
            app:action_icon="@drawable/icon_zero_super_help"
            app:action_name="@string/zero_pro_action_help"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>
