<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/relax_dialog_background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <com.wanos.media.widget.CustomDialogTitle
        android:id="@+id/title"
        android:layout_width="@dimen/relax_dialog_width_max"
        android:layout_height="wrap_content"
        app:dialog_title="@string/space_setting"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.wanos.media.widget.WanosTextView
        android:textSize="@dimen/relax_main_text_size"
        android:textColor="@color/relax_main_text_color"
        android:id="@+id/tv_alarm_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/relax_dialog_space"
        android:text="@string/clock_alert"
        android:layout_marginStart="@dimen/relax_dialog_space"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:wanos_weight="500"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_album"
        android:layout_width="0px"
        android:layout_height="@dimen/relax_setting_cover_image_height"
        android:layout_marginTop="@dimen/relax_setting_rv_top"
        android:layout_marginHorizontal="@dimen/relax_dialog_space"
        app:layout_constraintLeft_toLeftOf="@+id/title"
        app:layout_constraintRight_toRightOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/tv_alarm_select"/>
    <com.wanos.media.widget.WanosTextView
        android:id="@+id/btn_confirm"
        android:layout_marginTop="@dimen/relax_dialog_button_top"
        android:layout_marginBottom="@dimen/relax_dialog_space"
        android:minWidth="@dimen/relax_setting_button_width"
        android:text="@string/btn_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="@+id/title"
        app:layout_constraintRight_toLeftOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/rv_album"
        app:wanos_weight="500"
        style="@style/RelaxPositiveButton"/>
    <com.wanos.media.widget.WanosTextView
        android:id="@+id/btn_cancel"
        android:minWidth="@dimen/relax_setting_button_width"
        android:text="@string/btn_cancel"
        android:layout_marginStart="@dimen/relax_dialog_button_space"
        app:layout_constraintBottom_toBottomOf="@+id/btn_confirm"
        app:layout_constraintLeft_toRightOf="@+id/btn_confirm"
        app:layout_constraintRight_toRightOf="@+id/title"
        app:layout_constraintTop_toTopOf="@+id/btn_confirm"
        app:wanos_weight="500"
        style="@style/RelaxNegativeButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>
