<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/p_person_info_w"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="@dimen/p_person_info_w"
            android:layout_height="@dimen/p_person_info_h"
            android:layout_marginTop="@dimen/p_person_info_text_m_top">
            <TextView
                android:textSize="@dimen/p_person_info_text"
                android:textColor="@color/p_user_tab_text_selector"
                android:gravity="center"
                android:id="@+id/tv_person_info"
                android:background="@drawable/p_user_left_hint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/p_person_info_bt"
                android:splitMotionEvents="false"/>
            <View
                android:id="@+id/hint_per"
                android:background="#1368fb"
                android:layout_width="8dp"
                android:layout_height="match_parent"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="@dimen/p_person_info_w"
            android:layout_height="@dimen/p_person_info_h"
            android:layout_marginTop="@dimen/p_person_info_text_m_top">
            <TextView
                android:textSize="@dimen/p_person_info_text"
                android:textColor="@color/p_user_tab_text_selector"
                android:gravity="center"
                android:id="@+id/tv_order_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/p_person_order_bt"
                android:splitMotionEvents="false"/>
            <View
                android:id="@+id/hint_order"
                android:background="#1368fb"
                android:visibility="gone"
                android:layout_width="8dp"
                android:layout_height="match_parent"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="@dimen/p_person_info_w"
            android:layout_height="@dimen/p_person_info_h"
            android:layout_marginTop="@dimen/p_person_info_text_m_top">
            <TextView
                android:textSize="@dimen/p_person_info_text"
                android:textColor="@color/p_user_tab_text_selector"
                android:gravity="center"
                android:id="@+id/tv_qa_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/p_person_qa_list"
                android:splitMotionEvents="false"/>
            <View
                android:id="@+id/hint_qa"
                android:background="#1368fb"
                android:visibility="gone"
                android:layout_width="8dp"
                android:layout_height="match_parent"/>
        </FrameLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:textSize="@dimen/channel_name_text_size"
            android:textColor="@color/p_channel_name_color"
            android:gravity="center"
            android:id="@+id/tv_channel"
            android:background="@color/p_channel_name_bg_color"
            android:paddingTop="@dimen/channel_name_padding_t_b"
            android:paddingBottom="@dimen/channel_name_padding_t_b"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/channel_name"
            android:layout_marginStart="@dimen/channel_name_margin_l_r"
            android:layout_marginEnd="@dimen/channel_name_margin_l_r"/>
        <TextView
            android:textSize="@dimen/member_card_dialog_content_name_size"
            android:textColor="@color/p_login_input_hint_text"
            android:gravity="center"
            android:id="@+id/tv_version"
            android:paddingTop="@dimen/p_person_info_text_m_top"
            android:paddingBottom="@dimen/version_name_margin_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_name"/>
        <TextView
            android:textSize="@dimen/member_card_dialog_content_name_size"
            android:textColor="@color/p_login_input_hint_text"
            android:gravity="center"
            android:id="@+id/tv_version_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/version_name_margin_b"
            android:text="@string/version_name_2"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/layout_right_bottom"
        android:paddingTop="@dimen/drawable_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
