<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:layout_width="@dimen/p_logout_w"
        android:layout_height="@dimen/p_logout_h"
        app:cardBackgroundColor="@color/p_dialog_bg"
        app:cardCornerRadius="@dimen/p_logout_ra"
        app:cardElevation="0dp"
        app:contentPadding="0dp">
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/p_logout_pad"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/p_logout_title"
                android:textColor="@color/p_title_selected"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal"
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/p_logout_title_h"
                android:text="@string/p_logout"/>
            <TextView
                android:textSize="@dimen/p_logout_sub"
                android:textColor="@color/p_login_sub_title"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/p_sub_content_h"
                android:layout_marginTop="@dimen/p_login_sub_margin_top"
                android:text="@string/p_logout_sub"/>
            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/p_logout_margin_top">
                <TextView
                    android:textSize="@dimen/p_login_title_size"
                    android:textColor="@color/p_person_info_left_text"
                    android:gravity="center"
                    android:id="@+id/tv_logout_confirm"
                    android:background="@drawable/p_person_info_but_left"
                    android:layout_width="@dimen/p_logout_bt_w"
                    android:layout_height="@dimen/p_logout_bt_h"
                    android:text="@string/p_logout_confirm"/>
                <TextView
                    android:textSize="@dimen/p_login_title_size"
                    android:textColor="@color/p_person_info_left_text_un"
                    android:gravity="center"
                    android:id="@+id/tv_logout_cancel"
                    android:background="@drawable/p_person_info_but_left_unselect"
                    android:layout_width="@dimen/p_logout_bt_w"
                    android:layout_height="@dimen/p_logout_bt_h"
                    android:layout_marginLeft="@dimen/p_logout_margin_bt_left"
                    android:text="@string/p_logout_cancel"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>
